Closed Bug 343595 Opened 20 years ago Closed 19 years ago

{inc} overflow:hidden float in overflow:hidden div doesn't get repositioned correctly

Categories

(Core :: Layout: Floats, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sarimarton, Assigned: sharparrow1)

References

()

Details

(Keywords: testcase)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.4) Gecko/20060508 Firefox/1.5.0.4 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.4) Gecko/20060508 Firefox/1.5.0.4 The content area doesn't move. All other browsers, including Mozzila animates that correctly. Reproducible: Always
Attached file Testcase
Fun! This regressed sometime between 20050415 and 20050501 (yes, that's 2005). Probably not worth trying to figure out what regressed this, although I'd guess bug 240276.
Status: UNCONFIRMED → NEW
Component: General → Layout: Floats
Ever confirmed: true
Keywords: testcase
Product: Firefox → Core
QA Contact: general → layout.floats
Summary: JS Dynamic style change is buggy, even mozzila renders the page well, FF does not → {inc} overflow:hidden float in overflow:hidden div doesn't get repositioned correctly
Version: unspecified → Trunk
The URL regressed on reflow branch.
No change in behaviour with the testcase between: - Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/2006120606 Minefield/3.0a (pre-reflow branch) - Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/2006120804 Minefield/3.0a1 (post-reflow branch)
Attached patch PatchSplinter Review
Wow, this was surprisingly easy to fix.
Assignee: nobody → sharparrow1
Status: NEW → ASSIGNED
Attachment #270461 - Flags: review?(roc)
Checked in. (Not reftestable because it's a view bug.)
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: