Bug 343595: {inc} overflow:hidden float in overflow:hidden div doesn't get repositioned correctly. r+sr=roc